--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "scripts": {
     "start":"RUST_LOG=rowser cargo run -- $@",
+    "test": "RUST_LOG=rowser cargo test -- $@",
     "build": "cargo build",
     "build:win": "rustup target add x86_64-pc-windows-gnu && rustup toolchain install stable-x86_64-pc-windows-gnu --force-non-host && cargo build --target x86_64-pc-windows-gnu",
     "start:wine": "wine target/x86_64-pc-windows-gnu/debug/rowser.exe"
