--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ throw = { version = "0"}
 url = { version = "2"}
 winit = { version = "0" }
 lazy_static = { version = "1"}
-mtree = { git = "https://github.com/MagiusCHE/rust-mtree.git"}
+#mtree = { git = "https://github.com/MagiusCHE/rust-mtree.git"}
+mtree = { path = "../rust-mtree"  }
