implmeneted mtree and one Span. Need to rethink pixels clear or drow in order to call ite oce per frame (for all elements) not every time on every single element.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ throw = { version = "0"}
 url = { version = "2"}
 winit = { version = "0" }
 lazy_static = { version = "1"}
+derivative = { version = "2"}
 #mtree = { git = "https://github.com/MagiusCHE/rust-mtree.git"}
 mtree = { path = "../rust-mtree"  }
