--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "license": "MIT OR Apache-2.0",
   "private": true,
   "scripts": {
-    "start":"RUST_BACKTRACE=1 RUST_LOG=rowser cargo run -- $@",
-    "test": "RUST_BACKTRACE=1 RUST_LOG=rowser cargo test -- $@",
+    "start": "cross-env RUST_BACKTRACE=1 RUST_LOG=rowser cargo run -- $@",
+    "test": "cross-env RUST_BACKTRACE=1 RUST_LOG=rowser cargo test -- $@",
     "build": "cargo build",
     "build:win": "rustup target add x86_64-pc-windows-gnu && rustup toolchain install stable-x86_64-pc-windows-gnu --force-non-host && cargo build --target x86_64-pc-windows-gnu",
     "start:wine": "wine target/x86_64-pc-windows-gnu/debug/rowser.exe"
+  },
+  "dependencies": {
+    "cross-env": "^7.0.3"
   }
 }
